--- a/jquery/etch-a-sketch/index.html
+++ b/jquery/etch-a-sketch/index.html
@@ -5,11 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="css/etch.css">
 </head>
 <body>
-<div class="motherwrapper">
-<div class="wrapper">
-  <div class="grid"></div>
-</div>
-</div>
+<a href="#" onclick="reset(); return false;" class="btn btn-block btn-lg btn-danger">Reset</a>
+<div class="motherwrapper"><div class="wrapper"><div class="grid"></div></div></div>
 </body>
 <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="js/etch.js"></script>
